tests/paczka1/fuzzy1/39438761.err
Error in line 4: Wus8qNl A837 182,5
Error in line 10: Wus8qNl A837 96,3
Error in line 21: ZrREWFHxu0N A239 30,1
Error in line 22: P3Hh A239 69,2
Error in line 18: XCiia5O A893 111,5
